# proleptic

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_commands.json  plot-cpp-data.py
.github/workflows/: compile.yml
etc/: build_type.cmake  cflags.cmake  clang_format.cmake  tests.cmake
scripts/: clang-format-diff.sh
src/: CMakeLists.txt  diff-demo.cc  ex1.cc  ex2.cc  ex3.cc  ex4.cc  ex5.cc  extract-metronome.cc  grad-descent-demo.cc  hot-cross-buns-rhythm.cc  layer.hh  midi-autoencoder.cc  midi-demo.cc  multi-http-demo.cc  network.hh  notes-demo.cc  pp.hh  predict-accel-decel.cc  predict-midi.cc  predict-notes.cc  predict-period-from-midi.cc  predict-period-from-pattern.cc  predict-period-phase-from-midi.cc  predict-rhythm.cc  predict-tempo-from-pattern.cc  predict-tempo.cc  predict-timestamp.cc  rhythm-demo.cc  test-backprop.cc  test-from-midi.cc  text_parser.cc
src/audio/: CMakeLists.txt  alsa_devices.cc  alsa_devices.hh  audio_buffer.hh  midi_file.hh  midi_processor.cc  midi_processor.hh  midi_recording.hh  note_files.cc  note_files.hh  note_repository.cc  note_repository.hh  piano_roll.hh  synthesizer.cc  synthesizer.hh  timestamp.hh  wav_wrapper.cc  wav_wrapper.hh  wav_writer.cc  wav_writer.hh
src/db/: CMakeLists.txt  README.md  locality_sensitive_hash.hh  minhash.hh  multihash.hh  similarity.hh
src/dbus/: CMakeLists.txt  audio_device_claim.cc  audio_device_claim.hh
src/frontend/: CMakeLists.txt  charles-vector-experiment.cc  curis-demo.cc  example1.cc  example2.cc  example3.cc  file-watch-inotify.cc  hash-map.cc  match.cc  match_v8.cc  match_v9.cc  matchfind-from-file.cc  matchfind-from-piano.cc  metronome-clock-recovery.cc  metronome.cc  midi-input.cc  midi-recorder.cc  midi-to-piano.cc  old-play-on-midi-input.cc  play-on-midi-input.cc  play-sine-wave (copy 1).cc  play-sine-wave.cc  play-wav-file.cc  read-midi-recording.cc  split-ear-demo.cc  split-ear-octave.cc  split-ear-piano-roll.cc  synth-benchmark.cc  synth-worst-case.cc  synthesizer-test.cc
src/graph/: CMakeLists.txt  cairo_objects.cc  cairo_objects.hh  grapher.cc  grapher.hh
src/lib/: CMakeLists.txt  sampler.cc  sampler.hh
src/libsimplenn/: CMakeLists.txt  simplenn.cc  simplenn.hh
src/nn/: CMakeLists.txt  autoencoder.hh  backprop.hh  dnn_types.hh  gradient_descent.hh  inference.hh  layer.hh  network.hh  nngraph.cc  nngraph.hh  nnops.hh  randomize_network.hh  sampler.cc  sampler.hh  serdes.cc  serdes.hh  training.hh
src/oscillator/: CMakeLists.txt  \  osc.cc  osc.hh  testing.cc
src/predict/: CMakeLists.txt  match-finder-v2.cc  match-finder-v2.hh  match-finder.cc  match-finder.hh  timing-stats.hh
src/stats/: CMakeLists.txt  stats_printer.cc  stats_printer.hh
src/tests/: CMakeLists.txt  backprop.cc  gradient-descent.cc  locality-sensitive-hash.cc  minhash.cc  serdes-roundtrip.cc  similarity.cc
src/ui/: CMakeLists.txt  html.hh  http_reader.hh
src/util/: CMakeLists.txt  address.cc  address.hh  blank.cc  cdf.cc  cdf.hh  eventloop.cc  eventloop.hh  file_watch_loop.cc  file_watch_loop.hh  http_reader.hh  http_structures.hh  http_writer.cc  parser.hh  ring_buffer.cc  ring_buffer.hh  socket.cc  socket.hh  spans.hh  timer.hh  typed_ring_buffer.hh
src/visualizer/: CMakeLists.txt  visualizer.hh
