macro (add_exec exec_name)
    add_executable ("${exec_name}" "${exec_name}.cc")
    target_link_libraries ("${exec_name}" nn graph util ${Eigen_LDFLAGS} ${Eigen_LDFLAGS_OTHER})
endmacro (add_exec)

add_exec(text_parser)
add_exec(ex2)
add_exec(ex3)
add_exec(ex4)
add_exec(ex5)
add_exec(diff-demo)
add_exec(predict-tempo)
add_exec(predict-tempo-from-pattern)
add_exec(predict-timestamp)
add_exec(predict-accel-decel)
add_exec(predict-period-from-midi)
add_exec(predict-period-phase-from-midi)
add_exec(predict-rhythm)
add_exec(rhythm-demo)
add_exec(predict-notes)
add_exec(notes-demo)

add_subdirectory(libsimplenn)
