macro (add_exec exec_name)
    add_executable ("${exec_name}" "${exec_name}.cc")
    target_link_libraries ("${exec_name}" ${ARGN})
endmacro (add_exec)

add_exec(text_parser PkgConfig::Eigen)
add_exec(ex2 ui util)
add_exec(ex3 ui nn graph util)
add_exec(multi-http-demo ui util)
add_exec(ex4 ui nn graph util)
add_exec(ex5 ui nn graph util)
add_exec(diff-demo nn util)
add_exec(predict-tempo nn util)
add_exec(predict-timestamp nn util)
add_exec(predict-accel-decel nn util)
add_exec(predict-period-from-pattern nn util)
add_exec(predict-period-from-midi nn util)
add_exec(predict-period-phase-from-midi nn util)
add_exec(test-from-midi nn util)
add_exec(predict-rhythm nn util)
add_exec(rhythm-demo nn util)
add_exec(predict-notes nn util)
add_exec(notes-demo nn util)
add_exec(predict-midi nn util audio)
add_exec(midi-autoencoder ui nn graph util audio visualizer)
add_exec(midi-demo nn util audio)
add_exec(extract-metronome nn util audio)

add_subdirectory(libsimplenn)
