macro (add_exec exec_name)
    add_executable ("${exec_name}" "${exec_name}.cc")
    target_link_libraries ("${exec_name}" ${ARGN})
endmacro (add_exec)

add_exec(serdes-roundtrip util nn)
add_exec(backprop util nn)
add_exec(gradient-descent util nn)
add_exec(similarity util db)
add_exec(minhash util db)
